test/fail/tuple_param19.v3
//@seman
def id<T>(x: T) => x;
def id2<T>(x: T) -> (T, T) { return id(x, x); }
